--- a/application/build.gradle
+++ b/application/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.20.0'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
