--- a/application/build.gradle
+++ b/application/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation(project(":domain"))
 
+    implementation 'io.vavr:vavr:0.10.7'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.20.0'
